--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   "author": "Rodrigo Argüello Flores",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "commander": "^2.11.0",
-    "discord.js": "^11.1.0",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "js-yaml": "^3.10.0",
-    "lodash": "^4.17.4",
-    "node-opus": "^0.2.6",
+    "discord.js": "^12.2.0",
+    "js-yaml": "^3.14.0",
+    "lodash": "^4.17.15",
     "opusscript": "0.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.1",
     "eslint": "^3.19.0",
-    "mocha": "^3.5.0"
+    "mocha": "^7.2.0"
   }
 }
